<resources>
    <string name="app_name">TCA-Target Calculator</string>
    <string name="target_calculator">Target Calculator</string>
    <string name="over">Overs:</string>
    <string name="enter_overs">Enter Overs</string>
    <string name="first_innings_score">First Innings Score:</string>
    <string name="enter_score">Enter Score</string>
    <string name="show">Show</string>

    <string name="overs_text">Maximum overs of the game, per innings</string>
</resources>
